<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductDetailsActivity">
    <ImageView
        android:id="@+id/back_button"
        app:circularflow_angles="40"
        android:layout_width="50dp"
        android:elevation="10dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/duotone_arrow_left_circle_svgrepo_com"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/productImageListViewPager2"
                android:layout_width="match_parent"
                android:layout_height="280dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1.5"
                    android:gravity="center|left"
                    android:padding="5dp"
                    android:text="@string/_99999999_vnd"
                    android:textColor="@color/highlight_red"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/txt_sold_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="2.5"
                    android:gravity="center|right"
                    android:padding="5dp"
                    android:text="@string/_999_sold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_product_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center|left"
                android:padding="5dp"
                android:text="@string/r_u_t_k_ch_r_u_cf_h_a_ti_t_hoa_h_ng_tr_ng_ch_t_li_u_th_p" />

            <androidx.cardview.widget.CardView
                android:id="@+id/click_to_view_all_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_rating_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/product_reviews"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginEnd="80dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/txt_rating_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/_4_5_5_stars_20_reviews"
                        android:textSize="12sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/tempo_app_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_shop_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/kienbesirius"
                    app:layout_constraintBottom_toTopOf="@id/txt_shop_address"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="@id/circleImageView" />

                <TextView
                    android:id="@+id/txt_shop_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/bac_giang_city"

                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                    app:layout_constraintStart_toEndOf="@id/circleImageView"
                    app:layout_constraintTop_toBottomOf="@id/txt_shop_seller" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/menu_background"
                    android:padding="10dp"
                    android:text="@string/take_a_look"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/product_descriptions"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_product_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/product_desc_test" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="0">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:layout_weight="4"
                    android:background="@color/bg_black"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/you_may_interest"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:layout_weight="4"
                    android:background="@color/bg_black"
                    android:gravity="center" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/nav_product_detail_view"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/menu_background"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/product_detail_bottom_menu" />

        <TextView
            android:id="@+id/buy_now_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:background="@drawable/menu_background"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>