<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.hdcompany.admin.model.User" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_login_screen"
        tools:context=".fragment.ProfileFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={user.username}"
            app:layout_constraintBottom_toTopOf="@+id/sign_out_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdminAccessibility" />
        <TextView
            android:id="@+id/textViewAdminAccessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:background="@color/bg_login_screen"
            app:layout_constraintBottom_toTopOf="@id/sign_out_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_out_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/sign_out"
            android:background="@drawable/button_border"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/to_admin_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdminAccessibility" />

        <TextView
            android:id="@+id/to_admin_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:text="@string/to_admin"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_out_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>